--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is an example project</h1>
+    <img src="/pic/img1.png" alt="Mark Guerrero"/>
+    <nav></nav>
+    <header>Effective Solutions
+    for Your Business</header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
