--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="/pic/img1.png" alt="Mark Guerrero"/>
-    <nav></nav>
-    <header>Effective Solutions
-    for Your Business</header>
-    <main></main>
+    <header>
+        <a href="www.google.com">WEBSTUDIO</a>
+        <nav>
+            <ul>
+                <li><a href="#">Studio</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>  
+        </nav>
+    </header>
+    <main>
+        <h1>Effective Solutions
+        for Your Business</h1>
+        <button type="button">Order Service</button>
+    </main>
     <footer></footer>
 </body>
 </html>
