--- a/index.html
+++ b/index.html
@@ -1,26 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 </head>
 <body>
-    <header>
-        <a href="www.google.com">WEBSTUDIO</a>
-        <nav>
-            <ul>
-                <li><a href="#">Studio</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contacts</a></li>
-            </ul>  
+    <img>
+        <img>
+            <a href=""></a>
+            <img src="./pic/Web.svg" alt=""></img>
+            <img src="./pic/Studio.svg" alt=""></img>
         </nav>
+            <ul>
+                <li><p>Studio</p></li>
+                <li><p>Portfolio</p></li>
+                <li><p>Contacts</p></li>
+            </ul>
+         <p>info@devstudio.com</p>  
+         <p>+11 (000) 111-11-11</p>
     </header>
     <main>
-        <h1>Effective Solutions
-        for Your Business</h1>
-        <button type="button">Order Service</button>
+        <section id="hero-banner">
+            <h1>Effective Solutions
+            for Your Business</h1>
+            <button type="button">Order Service</button>
+            <a href="#hero-banner"></a>
+        </section>
+        <section id="our-work">
+            <ul>
+                <li>
+                    <h2>Strategy</h2>
+                    <p>Our goal is to identify the business
+                      problem to walk away with the perfect and creative solution. </p>
+                </li>
+                <li>
+                    <h2>Punctuality</h2>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h2>Punctuality</h2>
+                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li>
+                    <h2>Technologies</h2>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
+
+        </section>
+        <section></section>
     </main>
-    <footer></footer>
+
 </body>
 </html>
