--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
          <p>+11 (000) 111-11-11</p>
     </header>
     <main>
+        <hr>
         <section id="hero-banner">
             <h1>Effective Solutions
             for Your Business</h1>
             <button type="button">Order Service</button>
             <a href="#hero-banner"></a>
+            <hr>
         </section>
         <section id="our-work">
             <ul>
@@ -44,10 +46,35 @@
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
-
+            <hr>
         </section>
-        <section></section>
+        <section id="our team">
+            <h2>Our Team</h2>
+            <ul>
+                <li><img src="./pic/img.jpg" alt="worker1" width="264" height="260">
+                    <h2>Mark Guerrero</h2>
+                    <p>Product Designer</p>
+                </img></li>
+                <li><img src="./pic/img (1).jpg" alt="worker2" width="264" height="260">
+                    <h2>Tom Ford</h2>
+                    <p>Frontend Developer</p>
+                </img></li>
+                <li><img src="./pic/img (2).jpg" alt="worker3" width="264" height="260">
+                    <h2>Camila Garcia</h2>
+                    <p>Marketing</p>
+                </img></li>
+                <li><img src="./pic/img (3).jpg" alt="worker4" width="264" height="260">
+                    <h2>Daniel Wilson</h2>
+                    <p>UI Designer</p>
+                </img></li>
+            </ul>
+        </section>
     </main>
-
+<footer>
+    <hr>
+   <img src="./pic/Web.svg" alt=""></img>
+   <img src="./pic/Studio.svg" alt=""></img> 
+   <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</footer>
 </body>
 </html>
