--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 </head>
 <body>
-    <img>
-        <img>
+    <!-- Logo with navigation -->
+    <header>
             <a href=""></a>
             <img src="./pic/Web.svg" alt=""></img>
             <img src="./pic/Studio.svg" alt=""></img>
@@ -18,6 +18,7 @@
          <p>+11 (000) 111-11-11</p>
     </header>
     <main>
+        <!-- Main info -->
         <hr>
         <section id="hero-banner">
             <h1>Effective Solutions
@@ -70,6 +71,7 @@
             </ul>
         </section>
     </main>
+    <!-- Our goal -->
 <footer>
     <hr>
    <img src="./pic/Web.svg" alt=""></img>
