--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
         <section id="our team">
             <h2>Our Team</h2>
             <ul>
-                <li><img src="./pic/img.jpg" alt="worker1" width="264" height="260">
+                <img><img src="./pic/img.jpg" alt="worker1" width="264" height="260"></img>
                     <h2>Mark Guerrero</h2>
                     <p>Product Designer</p>
-                </img></li>
-                <li><img src="./pic/img (1).jpg" alt="worker2" width="264" height="260">
+                </li>
+                <img><img src="./pic/img (1).jpg" alt="worker2" width="264" height="260"></img>
                     <h2>Tom Ford</h2>
                     <p>Frontend Developer</p>
-                </img></li>
-                <li><img src="./pic/img (2).jpg" alt="worker3" width="264" height="260">
+                </li>
+                <img><img src="./pic/img (2).jpg" alt="worker3" width="264" height="260"></img>
                     <h2>Camila Garcia</h2>
                     <p>Marketing</p>
-                </img></li>
-                <li><img src="./pic/img (3).jpg" alt="worker4" width="264" height="260">
+                </li>
+                <li><img src="./pic/img (3).jpg" alt="worker4" width="264" height="260"></img>
                     <h2>Daniel Wilson</h2>
                     <p>UI Designer</p>
-                </img></li>
+                </li>
             </ul>
         </section>
     </main>
