--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
     <!-- Logo with navigation -->
     <header>
+        <nav>
             <a href=""></a>
             <img src="./pic/Web.svg" alt=""></img>
             <img src="./pic/Studio.svg" alt=""></img>
@@ -52,19 +53,20 @@
         <section id="our team">
             <h2>Our Team</h2>
             <ul>
-                <img><img src="./pic/img.jpg" alt="worker1" width="264" height="260"></img>
+                <img src="./pic/img.jpg" alt="worker1" width="264" height="260"></img>
                     <h2>Mark Guerrero</h2>
                     <p>Product Designer</p>
                 </li>
-                <img><img src="./pic/img (1).jpg" alt="worker2" width="264" height="260"></img>
+                <img src="./pic/img (1).jpg" alt="worker2" width="264" height="260"></img>
                     <h2>Tom Ford</h2>
                     <p>Frontend Developer</p>
                 </li>
-                <img><img src="./pic/img (2).jpg" alt="worker3" width="264" height="260"></img>
+                <img src="./pic/img (2).jpg" alt="worker3" width="264" height="260"></img>
                     <h2>Camila Garcia</h2>
                     <p>Marketing</p>
                 </li>
-                <li><img src="./pic/img (3).jpg" alt="worker4" width="264" height="260"></img>
+                <li>
+                <img src="./pic/img (3).jpg" alt="worker4" width="264" height="260"></img>
                     <h2>Daniel Wilson</h2>
                     <p>UI Designer</p>
                 </li>
