--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <nav>
             <a href=""></a>
-            <img src="./pic/Web.svg" alt=""></img>
-            <img src="./pic/Studio.svg" alt=""></img>
+            <img src="./pic/Web.svg" alt=""/>
+            <img src="./pic/Studio.svg" alt=""/>
         </nav>
             <ul>
                 <li><p>Studio</p></li>
