--- a/index.html
+++ b/index.html
@@ -56,20 +56,20 @@
         <section id="our team">
             <h2>Our Team</h2>
             <ul>
-                <img src="./pic/img.jpg" alt="worker1" width="264" height="260"></img>
+                <img src="./pic/img.jpg" alt="worker1" width="264" height="260"/>
                     <h2>Mark Guerrero</h2>
                     <p>Product Designer</p>
                 </li>
-                <img src="./pic/img (1).jpg" alt="worker2" width="264" height="260"></img>
+                <img src="./pic/img (1).jpg" alt="worker2" width="264" height="260"/>
                     <h2>Tom Ford</h2>
                     <p>Frontend Developer</p>
                 </li>
-                <img src="./pic/img (2).jpg" alt="worker3" width="264" height="260"></img>
+                <img src="./pic/img (2).jpg" alt="worker3" width="264" height="260"/>
                     <h2>Camila Garcia</h2>
                     <p>Marketing</p>
                 </li>
                 <li>
-                <img src="./pic/img (3).jpg" alt="worker4" width="264" height="260"></img>
+                <img src="./pic/img (3).jpg" alt="worker4" width="264" height="260"/>
                     <h2>Daniel Wilson</h2>
                     <p>UI Designer</p>
                 </li>
@@ -79,8 +79,8 @@
     <!-- Our goal -->
 <footer>
     <hr>
-   <img src="./pic/Web.svg" alt=""></img>
-   <img src="./pic/Studio.svg" alt=""></img> 
+   <img src="./pic/Web.svg" alt=""/>
+   <img src="./pic/Studio.svg" alt=""/>
    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
