--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <!-- Main info -->
     <main>
         <hr>
-        <section id="hero-banner">
+        <section id="#hero-banner">
             <h1>Effective Solutions
             for Your Business</h1>
             <button type="button">Order Service</button>
