--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Document</title>
     </head>
 <body>
-    <!-- Logo with navigation -->
+    <!-- Logo-with-navigation -->
     <header>
         <nav>
             <a href=""></a>
@@ -21,10 +21,10 @@
          <p>info@devstudio.com</p>  
          <p>+11 (000) 111-11-11</p>
     </header>
-          <!-- Main info -->
+          <!-- Main-info -->
     <main>
         <hr>
-        <section id="#hero banner">
+        <section id="#hero-banner">
             <h1>Effective Solutions
             for Your Business</h1>
             <button type="button">Order Service</button>
@@ -53,7 +53,7 @@
             </ul>
             <hr>
         </section>
-        <section id="our team">
+        <section id="our-team">
             <h2>Our Team</h2>
             <ul>
                 <img src="./pic/img.jpg" alt="worker1" width="264" height="260"/>
@@ -76,7 +76,7 @@
             </ul>
         </section>
     </main>
-    <!-- Our goal -->
+    <!-- Our-goal -->
 <footer>
     <hr>
    <img src="./pic/Web.svg" alt=""/>
