--- a/index.html
+++ b/index.html
@@ -5,83 +5,95 @@
         <meta name="viewport" content="width-device-width,initial-scale-1.0">
         <title>Document</title>
     </head>
-<body>
-    <!-- Logo-with-navigation -->
-    <header>
-        <nav>
-            <a href=""></a>
-            <img src="./pic/Web.svg" alt=""/>
-            <img src="./pic/Studio.svg" alt=""/>
-        </nav>
+    <body>
+        <!-- Logo-with-navigation -->
+        <header>
+            <nav>
+                <a href></a>
+                <img src="./pic/Web.svg" alt />
+                <img src="./pic/Studio.svg" alt />
+            </nav>
             <ul>
                 <li><p>Studio</p></li>
                 <li><p>Portfolio</p></li>
                 <li><p>Contacts</p></li>
             </ul>
-         <p>info@devstudio.com</p>  
-         <p>+11 (000) 111-11-11</p>
-    </header>
-          <!-- Main-info -->
-    <main>
-        <hr>
-        <section id="#hero-banner">
-            <h1>Effective Solutions
-            for Your Business</h1>
-            <button type="button">Order Service</button>
-            <a href="#hero-banner"></a>
+            <p>info@devstudio.com</p>
+            <p>+11 (000) 111-11-11</p>
+        </header>
+        <!-- Main-info -->
+        <main>
             <hr>
-        </section>
-        <section id="our-work">
-            <ul>
-                <li>
-                    <h2>Strategy</h2>
-                    <p>Our goal is to identify the business
-                      problem to walk away with the perfect and creative solution. </p>
-                </li>
-                <li>
-                    <h2>Punctuality</h2>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                </li>
-                <li>
-                    <h2>Punctuality</h2>
-                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
-                </li>
-                <li>
-                    <h2>Technologies</h2>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                </li>
-            </ul>
+            <section id="#hero-banner">
+                <h1>Effective Solutions
+                    for Your Business</h1>
+                <button type="button">Order Service</button>
+                <a href="#hero-banner"></a>
+                <hr>
+            </section>
+            <section id="our-work">
+                <ul>
+                    <li>
+                        <h2>Strategy</h2>
+                        <p>Our goal is to identify the business
+                            problem to walk away with the perfect and creative
+                            solution. </p>
+                    </li>
+                    <li>
+                        <h2>Punctuality</h2>
+                        <p>Bring the key message to the brand's audience for the
+                            best price within the shortest possible time.</p>
+                    </li>
+                    <li>
+                        <h2>Punctuality</h2>
+                        <p>Research and confirm brands with the strongest
+                            digital growth opportunities and minimize risk.</p>
+                    </li>
+                    <li>
+                        <h2>Technologies</h2>
+                        <p>Design practice focused on digital experiences. We
+                            bring forth a deep passion for problem-solving.</p>
+                    </li>
+                </ul>
+                <hr>
+            </section>
+            <section id="our-team">
+                <h2>Our Team</h2>
+                <ul>
+                    <li>
+                        <img src="./pic/img.jpg" alt="worker1" width="264"
+                            height="260" />
+                        <h2>Mark Guerrero</h2>
+                        <p>Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="./pic/img (1).jpg" alt="worker2" width="264"
+                            height="260" />
+                        <h2>Tom Ford</h2>
+                        <p>Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img src="./pic/img (2).jpg" alt="worker3" width="264"
+                            height="260" />
+                        <h2>Camila Garcia</h2>
+                        <p>Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./pic/img (3).jpg" alt="worker4" width="264"
+                            height="260" />
+                        <h2>Daniel Wilson</h2>
+                        <p>UI Designer</p>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <!-- Our-goal -->
+        <footer>
             <hr>
-        </section>
-        <section id="our-team">
-            <h2>Our Team</h2>
-            <ul>
-                <img src="./pic/img.jpg" alt="worker1" width="264" height="260"/>
-                    <h2>Mark Guerrero</h2>
-                    <p>Product Designer</p>
-                </li>
-                <img src="./pic/img (1).jpg" alt="worker2" width="264" height="260"/>
-                    <h2>Tom Ford</h2>
-                    <p>Frontend Developer</p>
-                </li>
-                <img src="./pic/img (2).jpg" alt="worker3" width="264" height="260"/>
-                    <h2>Camila Garcia</h2>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                <img src="./pic/img (3).jpg" alt="worker4" width="264" height="260"/>
-                    <h2>Daniel Wilson</h2>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <!-- Our-goal -->
-<footer>
-    <hr>
-   <img src="./pic/Web.svg" alt=""/>
-   <img src="./pic/Studio.svg" alt=""/>
-   <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-</footer>
-</body>
+            <img src="./pic/Web.svg" alt />
+            <img src="./pic/Studio.svg" alt />
+            <p>Increase the flow of customers and sales for your business with
+                digital marketing & growth solutions.</p>
+        </footer>
+    </body>
 </html>
