--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h2>Our Team</h2>
                 <ul>
                     <li>
-                        <img src="./pic/img.jpg" alt="worker1" width="264"
+                        <img src="/pic/img.jpg" alt="worker1" width="264"
                             height="260" />
                         <h2>Mark Guerrero</h2>
                         <p>Product Designer</p>
@@ -73,13 +73,13 @@
                         <p>Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./pic/img (2).jpg" alt="worker3" width="264"
+                        <img src="/pic/img (2).jpg" alt="worker3" width="264"
                             height="260" />
                         <h2>Camila Garcia</h2>
                         <p>Marketing</p>
                     </li>
                     <li>
-                        <img src="./pic/img (3).jpg" alt="worker4" width="264"
+                        <img src="/pic/img (3).jpg" alt="worker4" width="264"
                             height="260" />
                         <h2>Daniel Wilson</h2>
                         <p>UI Designer</p>
@@ -90,8 +90,8 @@
         <!-- Our-goal -->
         <footer>
             <hr>
-            <img src="./pic/Web.svg" alt />
-            <img src="./pic/Studio.svg" alt />
+            <img src="/pic/Web.svg" alt />
+            <img src="/pic/Studio.svg" alt />
             <p>Increase the flow of customers and sales for your business with
                 digital marketing & growth solutions.</p>
         </footer>
