--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <p>Product Designer</p>
                     </li>
                     <li>
-                        <img src="./pic/img (1).jpg" alt="worker2" width="264"
+                        <img src="/pic/img (1).jpg" alt="worker2" width="264"
                             height="260" />
                         <h2>Tom Ford</h2>
                         <p>Frontend Developer</p>
