--- a/index.html
+++ b/index.html
@@ -61,25 +61,25 @@
                 <h2>Our Team</h2>
                 <ul>
                     <li>
-                        <img src="/pic/img(1).jpg" alt="worker1" width="264"
+                        <img src="/pic/img.jpg" alt="worker1" width="264"
                             height="260" />
                         <h2>Mark Guerrero</h2>
                         <p>Product Designer</p>
                     </li>
                     <li>
-                        <img src="/pic/img(2).jpg" alt="worker2" width="264"
+                        <img src="/pic/img1.jpg" alt="worker2" width="264"
                             height="260" />
                         <h2>Tom Ford</h2>
                         <p>Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="/pic/img(3).jpg" alt="worker3" width="264"
+                        <img src="/pic/img2.jpg" alt="worker3" width="264"
                             height="260" />
                         <h2>Camila Garcia</h2>
                         <p>Marketing</p>
                     </li>
                     <li>
-                        <img src="/pic/img(4).jpg" alt="worker4" width="264"
+                        <img src="/pic/img3.jpg" alt="worker4" width="264"
                             height="260" />
                         <h2>Daniel Wilson</h2>
                         <p>UI Designer</p>
