--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
         <!-- Logo-with-navigation -->
         <header>
             <nav>
-                <a href></a>
-                <img src="./pic/Web.svg" alt />
-                <img src="./pic/Studio.svg" alt />
+                <a href>
+                    <img src="./pic/Web.svg" alt />
+                    <img src="./pic/Studio.svg" alt />
+                </a>
             </nav>
             <ul>
                 <li><p>Studio</p></li>
@@ -36,23 +37,29 @@
                     <li>
                         <h2>Strategy</h2>
                         <p>Our goal is to identify the business
-                            problem to walk away with the perfect and creative
+                            problem to walk away with the perfect and
+                            creative
                             solution. </p>
                     </li>
                     <li>
                         <h2>Punctuality</h2>
-                        <p>Bring the key message to the brand's audience for the
-                            best price within the shortest possible time.</p>
+                        <p>Bring the key message to the brand's audience for
+                            the
+                            best price within the shortest possible
+                            time.</p>
                     </li>
                     <li>
                         <h2>Punctuality</h2>
                         <p>Research and confirm brands with the strongest
-                            digital growth opportunities and minimize risk.</p>
+                            digital growth opportunities and minimize
+                            risk.</p>
                     </li>
                     <li>
                         <h2>Technologies</h2>
-                        <p>Design practice focused on digital experiences. We
-                            bring forth a deep passion for problem-solving.</p>
+                        <p>Design practice focused on digital experiences.
+                            We
+                            bring forth a deep passion for
+                            problem-solving.</p>
                     </li>
                 </ul>
                 <hr>
@@ -92,7 +99,8 @@
             <hr>
             <img src="/pic/Web.svg" alt />
             <img src="/pic/Studio.svg" alt />
-            <p>Increase the flow of customers and sales for your business with
+            <p>Increase the flow of customers and sales for your business
+                with
                 digital marketing & growth solutions.</p>
         </footer>
     </body>
