--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <!-- Logo-with-navigation -->
         <header>
             <nav>
-                <a href>
-                    <img src="./pic/Web.svg" alt />
-                    <img src="./pic/Studio.svg" alt />
-                </a>
+                <a href></a>
+                <img src="./pic/Web.svg" alt />
+                <img src="./pic/Studio.svg" alt />
+                </a href=""></a>
             </nav>
             <ul>
                 <li><p>Studio</p></li>
