--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Logo-with-navigation -->
         <header>
             <nav>
-                <a href></a>
+                <a href=""></a>
                 <img src="./pic/Web.svg" alt />
                 <img src="./pic/Studio.svg" alt />
                 </a href=""></a>
