--- a/index.html
+++ b/index.html
@@ -11,107 +11,98 @@
             <a href="index.html">WebStudio</a>
             <nav>
                 <ul>
-                    <li><studio<</li>
-                            <li>Portfolio</li>
-                            <li>Contacts</li>
-                        </ul>
-                    </nav>
-                    <address>
-                        <a
-                            href="mailto:info@devstudio.com">info@devstudio.com</a>
-                        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-                    </address>
-                </header>
-                <!-- Main-info -->
-                <main>
+                    <li><a href>Studio</a> </li>
+                    <li><a href>Portfolio</a></li>
+                    <li> <a href>Contacts</a></li>
+                </ul>
+            </nav>
+            <address>
+                <a
+                    href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </address>
+        </header>
+        <!-- Main-info -->
+        <main>
+            <hr>
+            <section id="#hero-banner">
+                <h1>Effective Solutions for Your Business</h1>
+                <button type="button">Order Service</button>
+                <hr>
+            </section>
+            <section id="our-work">
+                <li>
+                    <h2></h2>
+                    <ul>
+                        <li>
+                            <h3>Strategy</h3>
+                            <p>Our goal is to identify the business problem to
+                                walk away with the perfect and creative
+                                solution.</p>
+                        </li>
+                        <li>
+                            <h3>Punctuality</h3>
+                            <p>Bring the key message to the brand's audience for
+                                the best price within the shortest possible
+                                time.</p>
+                        </li>
+                        <li>
+                            <h3>Diligence</h3>
+                            <p>Research and confirm brands with the strongest
+                                digital growth opportunities and minimize
+                                risk.</p>
+                        </li>
+                        <li>
+                            <h3>Technologies</h3>
+                            <p></p>Design practice focused on digital
+                            experiences. We bring forth a deep passion for
+                            problem-solving.
+                        </li>
+                    </ul>
                     <hr>
-                    <section id="#hero-banner">
-                        <h1>Effective Solutions
-                            for Your Business</h1>
-                        <button type="button">Order Service</button>
-                        <a href="#hero-banner"></a>
-                        <hr>
-                    </section>
-                    <section id="our-work">
-                        <ul>
-                            <li>
-                                <h2>Strategy</h2>
-                                <p>Our goal is to identify the business
-                                    problem to walk away with the perfect
-                                    and
-                                    creative
-                                    solution. </p>
-                            </li>
-                            <li>
-                                <h2>Punctuality</h2>
-                                <p>Bring the key message to the brand's
-                                    audience for
-                                    the
-                                    best price within the shortest possible
-                                    time.</p>
-                            </li>
-                            <li>
-                                <h2>Punctuality</h2>
-                                <p>Research and confirm brands with the
-                                    strongest
-                                    digital growth opportunities and
-                                    minimize
-                                    risk.</p>
-                            </li>
-                            <li>
-                                <h2>Technologies</h2>
-                                <p>Design practice focused on digital
-                                    experiences.
-                                    We
-                                    bring forth a deep passion for
-                                    problem-solving.</p>
-                            </li>
-                        </ul>
-                        <hr>
-                    </section>
-                    <section id="our-team">
-                        <h2>Our Team</h2>
-                        <ul>
-                            <li>
-                                <img src="./pic/img.jpg" alt="worker1"
-                                    width="264"
-                                    height="260" />
-                                <h2>Mark Guerrero</h2>
-                                <p>Product Designer</p>
-                            </li>
-                            <li>
-                                <img src="./pic/img1.jpg" alt="worker2"
-                                    width="264"
-                                    height="260" />
-                                <h2>Tom Ford</h2>
-                                <p>Frontend Developer</p>
-                            </li>
-                            <li>
-                                <img src="./pic/img2.jpg" alt="worker3"
-                                    width="264"
-                                    height="260" />
-                                <h2>Camila Garcia</h2>
-                                <p>Marketing</p>
-                            </li>
-                            <li>
-                                <img src="./pic/img3.jpg" alt="worker4"
-                                    width="264"
-                                    height="260" />
-                                <h2>Daniel Wilson</h2>
-                                <p>UI Designer</p>
-                            </li>
-                        </ul>
-                    </section>
-                </main>
-                <!-- Our-goal -->
-                <footer>
-                    <hr>
-                    <img src="/pic/Web.svg" alt />
-                    <img src="/pic/Studio.svg" alt />
-                    <p>Increase the flow of customers and sales for your
-                        business
-                        with
-                        digital marketing & growth solutions.</p>
-                </footer>
-            </body>
-        </html>
+                </section>
+                <section id="our-team">
+                    <h2>Our Team</h2>
+                    <ul>
+                        <li>
+                            <img src="./image/img.jpg" alt="worker1"
+                                width="264"
+                                height="260" />
+                            <h3>Mark Guerrero</h3>
+                            <p>Product Designer</p>
+                        </li>
+                        <li>
+                            <img src="./image/img1.jpg" alt="worker2"
+                                width="264"
+                                height="260" />
+                            <h2>Tom Ford</h2>
+                            <p>Frontend Developer</p>
+                        </li>
+                        <li>
+                            <img src="./image/img2.jpg" alt="worker3"
+                                width="264"
+                                height="260" />
+                            <h3>Camila Garcia</h3>
+                            <p>Marketing</p>
+                        </li>
+                        <li>
+                            <img src="./image/img3.jpg" alt="worker4"
+                                width="264"
+                                height="260" />
+                            <h3>Daniel Wilson</h3>
+                            <p>UI Designer</p>
+                        </li>
+                    </ul>
+                </section>
+            </main>
+            <!-- Our-goal -->
+            <footer>
+                <hr>
+                <a href="./index.html">WebStudio</a>
+                <p>Increase the flow of customers and sales for your
+                    business
+                    with
+                    digital marketing & growth solutions.</p>
+            </footer>
+        </body>
+    </html>
