--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Logo-with-navigation -->
         <header>
             <nav>
-                <a href="index.html">WebStudio</a>
+                <a href="./index.html">WebStudio</a>
                 <ul>
                     <li><a href>Studio</a></li>
                     <li><a href>Portfolio</a></li>
@@ -17,18 +17,16 @@
                 </ul>
             </nav>
             <address>
-                <a
-                    href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <li><a
+                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </address>
         </header>
         <!-- Main-info -->
         <main>
-            <hr>
-            <section id="#hero-banner">
+            <section>
                 <h1>Effective Solutions for Your Business</h1>
                 <button type="button">Order Service</button>
-                <hr>
             </section>
             <section id="our-work">
                 <h2></h2>
