--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <h1>Effective Solutions for Your Business</h1>
                 <button type="button">Order Service</button>
             </section>
-            <section id="our-work">
-                <h2></h2>
+            <section>
+                <h2>our-work</h2>
                 <ul>
                     <li>
                         <h3>Strategy</h3>
