--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                     </li>
                     <li>
                         <h3>Technologies</h3>
-                        <p></p>Design practice focused on digital
-                        experiences. We bring forth a deep passion for
-                        problem-solving.
+                        <p>Design practice focused on digital
+                            experiences. We bring forth a deep passion for
+                            problem-solving.</p>
                     </li>
                 </ul>
                 <hr>
@@ -62,28 +62,27 @@
                 <h2>Our Team</h2>
                 <ul>
                     <li>
-                        <img src="./image/img.jpg" alt="worker1"
-                            width="264"
-                            height="260" />
+                        <img src="./images/img.jpg" alt="worker1"
+                            width="264" />
                         <h3>Mark Guerrero</h3>
                         <p>Product Designer</p>
                     </li>
                     <li>
-                        <img src="./image/img1.jpg" alt="worker2"
+                        <img src="./images/img1.jpg" alt="worker2"
                             width="264"
                             height="260" />
                         <h2>Tom Ford</h2>
                         <p>Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./image/img2.jpg" alt="worker3"
+                        <img src="./images/img2.jpg" alt="worker3"
                             width="264"
                             height="260" />
                         <h3>Camila Garcia</h3>
                         <p>Marketing</p>
                     </li>
                     <li>
-                        <img src="./image/img3.jpg" alt="worker4"
+                        <img src="./images/img3.jpg" alt="worker4"
                             width="264"
                             height="260" />
                         <h3>Daniel Wilson</h3>
