--- a/index.html
+++ b/index.html
@@ -69,22 +69,19 @@
                     </li>
                     <li>
                         <img src="./images/img1.jpg" alt="worker2"
-                            width="264"
-                            height="260" />
+                            width="264" />
                         <h3>Tom Ford</h3>
                         <p>Frontend Developer</p>
                     </li>
                     <li>
                         <img src="./images/img2.jpg" alt="worker3"
-                            width="264"
-                            height="260" />
+                            width="264" />
                         <h3>Camila Garcia</h3>
                         <p>Marketing</p>
                     </li>
                     <li>
                         <img src="./images/img3.jpg" alt="worker4"
-                            width="264"
-                            height="260" />
+                            width="264" />
                         <h3>Daniel Wilson</h3>
                         <p>UI Designer</p>
                     </li>
