--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width-device-width,initial-scale-1.0">
-        <title>Document</title>
+        <title>WebStudio</title>
     </head>
     <body>
         <!-- Logo-with-navigation -->
@@ -57,7 +57,6 @@
                             problem-solving.</p>
                     </li>
                 </ul>
-                <hr>
             </section>
             <section id="our-team">
                 <h2>Our Team</h2>
@@ -91,7 +90,6 @@
         </main>
         <!-- Our-goal -->
         <footer>
-            <hr>
             <a href="./index.html">WebStudio</a>
             <p>Increase the flow of customers and sales for your
                 business
